# ZinZen-scheduler

./: .editorconfig  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  build-for-frontend.sh  build.rs  build.sh  deno_bench.sh  deno_bench.ts  flake.nix  fmt.sh  my_type_formatters_for_debugging  package.json  perf.data  perf.data.old  setup_web.sh  simd.py  start_web.sh  temp.txt  test.mjs  test.sh  todos.md  update_artifacts.sh
.cargo/: config
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-front-end.yml  deno.yml  publish-js-api.yml  publish-to-npm.yml  rust.yml  test-js.yml  test-rust.yml
build_templates/: run_test.rs  test_fn _soft_assertion.rs  test_fn.rs  test_fn_broken.rs  test_fn_experimental.rs  test_fn_stable.rs  tests_mod.rs
documentation/: Readme.md
documentation/ADR/: 000-template.md  001-generation-of-tests-feature-flag.md  001-skip-generation-of-tests-feature-flag.md
documentation/functional/: Algorithm-Overview.md  Concepts.md  Readme.md
documentation/technical/: Debugging-Setup.md  Development-Setup.md  Profiling.md  Project-Structure.md  Readme.md  Troubleshooting.md
js-api/: scheduler.d.ts  scheduler.js  scheduler.wasm  scheduler_bg.wasm  scheduler_bg.wasm.d.ts
js-tests/: basic-test.ts  every-wednesday.ts  non-rep-bounds-multipledays.ts  realistic.ts  repetition.ts  singleday-manygoals.ts
js-tests/basic-test/: input.json
js-tests/every-wednesday/: output.json
js-tests/non-rep-bounds-multipledays/: output.json
js-tests/realistic-schedule/: input.json  output.json
js-tests/repetition-daily/: input.json  output.json
js-tests/repetition-daily-bounds/: input.json  output.json
js-tests/singleday-manygoals/: input.json  output.json
js-tests/sleep/: input.json  output.json
pkg/: package.json  scheduler.d.ts  scheduler.js  scheduler_bg.wasm
scripts/: build.sh  cargo-check.sh  check.sh  deno_bench.sh  deno_test.sh  syncWasmBindgenVersions.sh  test  test_summary.rs  updateNpmPackageVersion.sh
scripts/debug_formatter/: chrono.py  chrono_formatter
src/: budget.rs  calendar.rs  console.rs  date_range.rs  error.rs  errors.rs  goal.rs  graph_handler.rs  input.rs  lib.rs  main.rs  options_generator.rs  output_formatter.rs  preprocessor.rs  repetition.rs  schedule.rs  scheduler.rs  scheduler_core.rs  slot.rs  slot_assigner.rs  slot_generator.rs  task.rs  task_budgets.rs  task_generator.rs  task_placer.rs  tasks.rs  tests.rs  time_slice_iterator.rs  time_slot_iterator.rs  unit_tests.rs  unit_tests.rs.backup  util.rs
src/input/: input.rs
src/legacy/: budget.rs  date.rs  goal.rs  input.rs  mod.rs  output.rs  repetition.rs  step.rs
src/legacy/slot/: iterator.rs  mod.rs
src/legacy/timeline/: iterator.rs  mod.rs
src/mocking/: mod.rs
src/models/: activity.rs  budget.rs  calendar.rs  calendar_interval.rs  date.rs  day.rs  day_filter.rs  flexibility.rs  goal.rs  input.rs  interval.rs  mod.rs  output.rs  repetition.rs  slot.rs  slot_iterator.rs  task.rs  task_budgets.rs  timeline.rs  utils.rs
src/models/budget/: impls.rs  mod.rs
src/models/goal/: impls.rs  mod.rs
src/models/slot/: filter.rs  impls.rs  iterator.rs  mod.rs  utils.rs
src/models/slot_iterator/: filter.rs  iterator.rs  mod.rs  utils.rs
src/models/slots_iterator/: filter.rs  iterator.rs  mod.rs  utils.rs
src/models/step/: impls.rs  mod.rs
src/models/task/: impls.rs  mod.rs
src/models/timeline/: iterator.rs  mod.rs
src/new_models/: calendar.rs  date.rs  day.rs  day_filter.rs  flexibility.rs  goal.rs  mod.rs  slot.rs
src/services/: activity_generator.rs  activity_placer.rs  budgeting.rs  filter.rs  flexibility.rs  glue_slots.rs  interval_generator.rs  interval_helper.rs  mod.rs  output.rs  preprocess.rs  splitters.rs  step_generator.rs  steps_sorting.rs  task_generator.rs  task_placer.rs  timeline.rs  transform.rs  utils.rs
src/services/filter/: filter_not_on.rs  filter_on_days.rs  filter_timing.rs  mod.rs
src/services/new_filter/: filter_not_on.rs  filter_on_days.rs  filter_timing.rs  mod.rs
src/services/placer/: conflicts.rs  find_best_slots.rs  mod.rs
src/technical/: input_output.rs  mod.rs  technical.rs
src/tests/: filter.rs  general.rs  mod.rs  slot.rs  slots_iterator.rs  step.rs  task.rs  timeline.rs  utils.rs
src/tests/filter/: apply_filter.rs  cmp_old_filter.rs  filter_not_on.rs  filter_on_days.rs  filter_timing.rs  mod.rs
src/tests/timeline/: merge_slots.rs  mod.rs  remove_slots.rs
src/time_slot_iterator/: mod.rs  time_filter.rs
test/: build.sh  ci.ts  ci_test.ts  goals.json  output.wasm  scheduler.wasm  test.js  test.json  test.mjs  test.ts  test2.ts
tests/: common.rs  deno_tests.ts  integration_tests.rs  rust_tests.rs  wasm.rs
tests/common/: mod.rs
tests/jsons/: rename_inputs.sh  rename_outputs.sh
tests/jsons/after-12/: actual_output.json  input.json  output.json
tests/jsons/basic-1/: actual_output.json  basic-1.txt  input.json  output.json
tests/jsons/basic-2/: actual_output.json  basic-2.txt  (+3 more)
ts/: api.ts  scheduler.wasm
utilities/: main.rs  readme.md
(+494 files in other folders)
