[package]
name = "zinzen"
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0-or-later"
keywords = ["zinzen", "scheduler", "todo"]
description = "Algorithm for auto-scheduling time-constrained tasks on a timeline"
homepage = "https://github.com/tijlleenders/ZinZen-scheduler"
repository = "https://github.com/tijlleenders/ZinZen-scheduler"
readme = "README.md"
categories = ["algorithms", "date-and-time", "wasm"]

[features]
experimental-testset = []
skip-test-generation = []
with-logging = []
new-tests = []
default = ["new-tests", "with-logging"]
dhat-heap = ["dhat"]

[lib]
#see https://github.com/rust-lang/cargo/issues/6659#issuecomment-463335095
crate-type = ['cdylib', 'lib']
name = 'scheduler'
path = "src/lib.rs"

[profile.release]
lto = true
debug = false
# Tell `rustc` to optimize for small code size s or speed 2 / 3.
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory"]

[dependencies]
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
chrono = { version = "0.4.38", features = ["wasmbind", "serde"] }
dhat = { version = "0.3.2", optional = true }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
# instead of wasm-bindgen::serde-serialize feature that may lead to a cyclic package dependency 
serde-wasm-bindgen = "0.6.5"

# display Rust panics as console.error()
console_error_panic_hook = "0.1.7"

[dev-dependencies]

[build-dependencies]
